SERVER-33606 fail to create logical session in shell connected to old servers

Also add --disableImplicitSessions shell cmdline arg.