src/mongo/shell/shell_utils.cpp
@@ -284,7 +284,7 @@ BSONObj shouldRetryWrites(const BSONObj&, void* data) {
 }
 
 BSONObj shouldUseImplicitSessions(const BSONObj&, void* data) {
-    return BSON("" << true);
+    return BSON("" << shellGlobalParams.shouldUseImplicitSessions);
 }
 
 BSONObj interpreterVersion(const BSONObj& a, void* data) {
